# telegram-ai-agent

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  backup.sh  deploy.sh  docker-compose.yml  dump_dialog.py  gen_session_string.py  pyproject.toml  sniff_chat_id.py  verify_chat_id.py
app/: __main__.py  config.py  db.py  ingestion.py  llm.py  models.py  notifier.py  schemas.py  service.py
config/: app.yaml
migrations/: 001_init.sql
telegram-ai-agent/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
telegram-ai-agent/app/: __main__.py  config.py  db.py  llm.py  models.py  schemas.py  service.py
telegram-ai-agent/config/: app.yaml
telegram-ai-agent/migrations/: 001_init.sql
telegram_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
